# Slackwoot

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  config.example.yaml  docker-compose.yml  entrypoint.sh  env.example  pyproject.toml  requirements.txt  run.py
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/app/: activity_log.py  chatwoot_client.py  config.py  crypto.py  database.py  db_activity_log.py  db_config.py  db_inbox_mappings.py  db_thread_store.py  main.py  middleware.py  models.py  slack_client.py  thread_store.py
src/app/routes/: admin.py  api.py  chatwoot.py  slack.py  ui.py
src/app/templates/: 404.html  admin.html  base.html  config.html  inbox_detail.html  index.html  login.html  setup.html
tests/: conftest.py  test_chatwoot_helpers.py  test_crypto.py  test_db_stores.py  test_webhook_chatwoot.py  test_webhook_slack.py
