[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slackwoot"
version = "0.1.0"
description = "Chatwoot <-> Slack bridge"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"app" = ["templates/**/*", "static/**/*"]
