[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "slackwoot"
dynamic = ["version"]
description = "Chatwoot <-> Slack bridge"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "cryptography>=42.0.0",
    "bcrypt>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"app" = ["templates/**/*", "static/**/*"]

[tool.setuptools_scm]
# Write version to a file so it works without git (e.g. in Docker builds from tarballs)
write_to = "src/app/_version.py"
# Fallback if no git tags exist (e.g. fresh clone with no tags)
fallback_version = "0.0.0-dev"
